# snap-parser

./: LICENSE  PYPI-README.md  README.md  pyproject.toml
src/: __init__.py
src/snap-parser/: __init__.py
