[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snap-parser"
dynamic = ["version"]
description = "Parse Snap!'s project file format."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "PPPDUD", email = "mojavesoft@gmail.com" },
]
classifiers = []
dependencies = ["xmltodict"]

[project.urls]
Documentation = "https://github.com/PPPDUD/snap-parser#readme"
Issues = "https://github.com/PPPDUD/snap-parser/issues"
Source = "https://github.com/PPPDUD/snap-parser"

[tool.hatch.version]
path = "src/snap_parser/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/snap_parser tests}"

[tool.coverage.run]
source_pkgs = ["snap_parser", "tests"]
branch = true
parallel = true
omit = [
  "src/snap_parser/__about__.py",
]

[tool.coverage.paths]
snap_parser = ["src/snap_parser", "*/snap-parser/src/snap_parser"]
tests = ["tests", "*/snap-parser/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
